refactor for using interfaces instead of implementations