@@ -3,13 +3,15 @@ package com.yandex.kanban.service;
 import com.yandex.kanban.model.Task;
 
 import java.util.ArrayList;
+import java.util.List;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private static final int MAX_HISTORY_SIZE = 10;
-    private final ArrayList<Task> history;
+    private final List<Task> history;
 
     public InMemoryHistoryManager() {
-        history = new ArrayList<>();
+        history = new LinkedList<>();
     }
 
     @Override
@@ -19,14 +21,14 @@ public class InMemoryHistoryManager implements HistoryManager {
         }
 
         if (history.size() >= MAX_HISTORY_SIZE) {
-            history.remove(0);
+            history.removeFirst();
         }
 
         history.add(task.copy());
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public List<Task> getHistory() {
         return new ArrayList<>(history);
     }
 }
